[package]
name = "apt-cmd"
description = "Async library for interacting with apt commands"
version = "0.4.0"
license = "MPL-2.0"
keywords = ["apt", "async", "tokio", "debian"]
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
repository = "https://github.com/pop-os/apt-cmd"

[dependencies]
anyhow = "1.0.83"
as-result = "0.2.1"
async-fetcher = "0.11.0"
async-stream = "0.3.5"
derive_more = "0.99.17"
futures = "0.3.30"
hex = "0.4.3"
md-5 = "0.10.6"
procfs = "0.16.0"
sha-1 = "0.10.1"
thiserror = "1.0.60"
rayon = "1.10.0"
deb-version = "0.1.1"

[dependencies.tokio]
version = "1.37.0"
features = ["fs", "io-util", "process", "rt", "sync", "time"]

[dependencies.tokio-stream]
version = "0.1.15"
features = ["io-util"]

[dev-dependencies.tokio]
version = "1.37.0"
features = ["full"]
